  * Enable SENSORS_DRIVETEMP
  * [riscv64] Enable SOC_VIRT
  * [riscv64] Enable GPIOLIB, GPIO_SIFIVE, POWER_RESET, POWER_RESET_GPIO,
    POWER_RESET_GPIO_RESTART, POWER_RESET_RESTART, CONFIG_PWM,
    CONFIG_PWM_SIFIVE, CONFIG_SIFIVE_L2

  [ Christian Barcenas ]
  * linux-kbuild: Stop building conmakehash
  * linux-cpupower: Add libcap to Build-Depends and turbostat linker flags

  [ Romain Perier ]
  * [x86] udeb: Add crc32_pclmul to crc-modules
  * udeb: Add crc32_generic to crc-modules

 -- Ben Hutchings <benh@debian.org>  Mon, 30 Mar 2020 14:50:42 +0100

linux (5.5.13-1) unstable; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_5.5
    (Closes: #953680)
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.1
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.2
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.4
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.5
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.6
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.7
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.8
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.9
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.10
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.11
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.12
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.5.13

  [ Ben Hutchings ]
  * aufs: Update support patchset to aufs5.x-rcN 20200120; no functional
    change
  * net: Enable NET_SWITCHDEV; disable on armel/marvell (Closes: #949863)
  * [armhf] net/ethernet/ti: Enable TI_CPSW_SWITCHDEV as module; enable TI_CPTS
  * wireless: Enable regulatory.db direct loading:
    - Drop "wireless: Disable regulatory.db direct loading"