@@ -23,9 +23,9 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  arch/x86/Kconfig                              |  8 ++++
  arch/x86/entry/common.c                       |  3 +-
  arch/x86/entry/syscall_64.c                   | 46 +++++++++++++++++++
- arch/x86/include/asm/elf.h                    |  4 +-
+ arch/x86/include/asm/elf.h                    |  6 ++-
  arch/x86/include/asm/syscall.h                | 13 ++++++
- 6 files changed, 76 insertions(+), 2 deletions(-)
+ 6 files changed, 78 insertions(+), 2 deletions(-)
 
 diff --git a/Documentation/admin-guide/kernel-parameters.txt b/Documentation/admin-guide/kernel-parameters.txt
 index ade4e6ec23e0..566631580a15 100644
@@ -138,18 +138,20 @@ index adf619a856e8..cf450e0a9d5a 100644
 +
  #endif
 diff --git a/arch/x86/include/asm/elf.h b/arch/x86/include/asm/elf.h
-index 69c0f892e310..4cfc1795e2c4 100644
+index 69c0f892e310..37cf2da3dd1c 100644
 --- a/arch/x86/include/asm/elf.h
 +++ b/arch/x86/include/asm/elf.h
-@@ -11,6 +11,7 @@
+@@ -11,6 +11,9 @@
  #include <asm/user.h>
  #include <asm/auxvec.h>
  #include <asm/fsgsbase.h>
++#ifndef COMPILE_OFFSETS /* avoid a circular dependency on asm-offsets.h */
 +#include <asm/syscall.h>
++#endif
  
  typedef unsigned long elf_greg_t;
  
-@@ -163,7 +164,8 @@ do {						\
+@@ -163,7 +166,8 @@ do {						\
  
  #define compat_elf_check_arch(x)					\
  	(elf_check_arch_ia32(x) ||					\
