@@ -25,6 +25,7 @@ linux (5.6.2-1~exp1) UNRELEASED; urgency=medium
   [ Christian Barcenas ]
   * linux-kbuild: Stop building conmakehash
   * linux-cpupower: Add libcap to Build-Depends and turbostat linker flags
+  * [amd64] Update "x86: Make x32 syscall support conditional ..." for 5.6
 
   [ Romain Perier ]
   * [x86] udeb: Add crc32_pclmul to crc-modules
